@@ -1,5 +1,10 @@
 2004-06-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* Makefile: Split target all into three parts, one that must be executed
+	alone and two that can be executed concurrently.
+
+2004-06-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* tools/helper.mk: Skip automatic dependency tracking if
 	DEPENDENCIES=no.
 
